--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <ul id="cat-list"></ul>
     <div id="cat">
 
-        <h2 id="cat-name"></h2>
-        <div id="cat-count"></div>
-        <img id="cat-img" src="" alt="cute cat">
+        <h2  data-bind = "text: name" id="cat-name"></h2>
+        <div data-bind = "text: clickCount" id="cat-count"></div>
+        <img id="cat-img" src="" alt="cute cat" data-bind="click: incrementCounter, attr: {src: imgSrc}">
+        <h2>Cat petnames:</h2>
+        <ul data-bind='foreach: months'>
+            <li data-bind='text: $data'></li>
+        </ul>
 
     </div>
     <script src="js/lib/knockout-3.2.0.js"></script>
